2025-12-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (glyph_node::add_self): Initialize
	local pointer variable `nn` to `0`.  Before returning,
	`assert(3)` that it is no longer a null pointer.

2025-12-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::is_usable_as_delimiter)
	(token::description): Double the size of the stack-allocated
	buffer we use to populate diagnostic messages about characters
	being unsuitable for use as delimiter, or unsuitable for use at
	all, respectively.  I'm thrilled about neither potentially
	truncating identifiers nor about grabbing a potentially
	unbounded amount of space from the stack, nor about leaking
	memory on the heap--there's no good place to free this memory
	because we return a `char` pointer to our caller.  Risking
	truncation seems the best of a bad set of choices.

2025-12-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Improve
	diagnostic when describing a nonexistent special character or
	class by reporting its identifier, at least up to the point
	where the size of our buffer truncates it.  (How do you get a
	"nonexistent special character or class" that nevertheless has
	an identifier?  It's part of the input syntax.  What you do is
	attempt to interpolate a special character (or class--an invalid
	operation anyway, but stay with me) in a context where character
	interpolation makes no sense, as in a numeric expression.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp (do_file): Say "non-portable"
	instead of "unportable" in diagnostic message.  Prompted by a
	similar change to the tzdata project by Paul Eggert.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi.in (Delimiters):
	* man/groff.7.man (Delimiters): Clarify that an invalid escape